# dive

./: .dockerignore  .drone.yml  .env  .env.default  .env.example  .gitattributes  .gitignore  404.html  AUTO_ALIGN_FEATURE_PLAN.md  AUTO_REGISTER_FEATURE_PLAN.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  RESULTS.md  ROTATION_FEATURE_PR.md  WEB_MULTICAM_PLAN.MD  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml  index.html  mkdocs.yml  sitemap.xml
Annotation-QuickStart/: index.html
Annotation-Sets/: index.html
Annotation-User-Interface-Overview/: index.html
Architecture-For-New-Developers/: index.html
Command-Line-Tools/: index.html
DataFormats/: index.html
Deployment-Docker-Compose/: index.html
Deployment-Girder-5-Upgrade/: index.html
Deployment-Overview/: index.html
Deployment-Provision/: index.html
Deployment-Storage/: index.html
Dive-Desktop/: index.html
FAQ/: index.html
Interactive-Annotation/: index.html
Large-Image-Support/: index.html
Mouse-Keyboard-Shortcuts/: index.html
Multicamera-data/: index.html
Pipeline-Documentation/: index.html
Pipeline-Import-Export/: index.html
Screenshots/: index.html
Support/: index.html
UI-Annotation-View/: index.html
UI-AttributeConfiguration/: index.html
UI-AttributeDetails/: index.html
UI-AttributeTrackFiltering/: index.html
UI-Attributes/: index.html
UI-DatasetInfo/: index.html
UI-Group-Manager/: index.html
UI-Image-Enhancements/: index.html
UI-Navigation-Editing-Bar/: index.html
UI-Suppression/: index.html
UI-Timeline/: index.html
UI-Track-List/: index.html
UI-Type-List/: index.html
Web-Version/: index.html
ascent/: setup.py
client/: .env  .env.development  .env.production  .eslintignore  .eslintrc.js  .gitignore  README.md  VUE3-UPGRADE-PR-SUMMARY.md  VUE3-UPGRADE.md  _vue.config.js  bundle.css  checkbuild.sh  components.d.ts  desktop.html  electron-builder.json  electron.vite.config.ts  index.html  index.web.html  jsconfig.json  package-lock.json  package.json  playwright.config.ts  rollup.config.js  tsconfig.cli.json  tsconfig.electron.json  tsconfig.json  tsconfig.rollup.json  tsconfig.spec.json  vite.config.electron.ts  vite.config.lib.ts  vite.config.ts  vite.config.web.ts  vite.css.ts  vite.desktop.config.ts  vite.girderComponentsResolver.ts  vite.shared.ts  vitest.girder-mock.ts  vitest.setup.ts  vue.config.js
devops/: .gitignore  README.md  inventory.local  main.tf
docker/: .env  .env.default  .gitignore  README.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.workers.yml  docker-compose.yml  entrypoint_server.sh  entrypoint_worker.sh  girder.Dockerfile  girder_worker.Dockerfile  girder_worker.docker  girder_worker_gpu.Dockerfile  pull.sh  server_setup.py  viame_girder_worker.Dockerfile  viame_girder_worker_gpu.Dockerfile
docs/: Annotation-QuickStart.md  Annotation-Sets.md  Annotation-User-Interface-Overview.md  (+58 more)
server/: NOTICE  README.md  S3_IMPORT_EXPLAINER.md  checkbuild.sh  dev-requirements.txt  mypy.ini  pyproject.toml  setup.py  tox.ini
server/bucket_notifications/: README.md  __init__.py  constants.py  models.py  views.py
server/dive_server/: __init__.py  _foo.json  _foocors.json  client_webroot.py  constants.py  crud.py  crud_annotation.py  crud_dataset.py  crud_override.py  crud_rpc.py  event.py  gcs_s3_subscriber.py  multicam.py  pipelines.py  s3subscriber.py  sam2_service.py  stale_cancellation.py  stereo_service.py  training.py  transforms.py  utils.py  viame.py  viame_detection.py  viame_segmentation_service.py  viame_summary.py  views_annotation.py  views_configuration.py  views_dataset.py  views_override.py  views_rpc.py  views_summary.py  vital_segmentation_service.py  worker_capabilities.py
server/dive_server/mail_templates/: welcome.mako
server/dive_server/serializers/: kwcoco.py  meva.py  models.py  viame.py
server/dive_tasks/: __init__.py  __main__.py  celeryconfig.py  dive_batch_postprocess.py  frame_alignment.py  local_tasks.py  manager.py  multicam_pipeline.py  pipeline_discovery.py  summary.py  tasks.py  utils.py  worker_girder_events.py
server/dive_utils/: __init__.py  calibration_format.py  constants.py  frame_metadata.py  models.py  timestamp_parser.py  types.py
server/dive_utils/serializers/: dive.py  fathomnet.py  frame_metadata.py  google_vertex_ai.py  kpf.py  kwcoco.py  meva.py  viame.py
server/dive_utils/types/: pipelines.py
server/rabbitmq_user_queues/: README.md  __init__.py  constants.py  models.py  views.py
server/scripts/: __init__.py  cli.py  cli_dev.py  commands.py  commands_dev.py  commands_main.py  debug_cli.py  entrypoint_dev.py  entrypoint_main.py  generateLargeDataset.py  migrations.py
server/tests/: test_annotation_rollback.py  test_attributes_processor.py  test_calibration_format.py  test_create_multicam.py  test_crud_rpc.py  test_deserialize_kwcoco_json.py  test_deserialize_viame_csv.py  test_event_frame_metadata.py  test_frame_metadata.py  test_frame_metadata_crud.py  test_frame_metadata_naming.py  test_frame_metadata_sources.py  test_image_sort.py  test_migrate.py  test_multicam_dataset.py  test_multicam_export_clone.py  test_multicam_pipeline.py  test_multicam_zip_import.py  test_pipeline_discovery.py  test_process_items.py  test_serialize_tracks.py  test_serialize_viame_csv.py  test_smoke_tasks.py  test_stale_cancellation.py  test_stream_subprocess.py  test_timestamp_parser.py  test_update_metadata.py  test_validate_files.py
server/tests/integration/: conftest.py  test_dataset_download.py  test_dataset_operations.py  test_dataset_upload.py  test_download_extract.py  test_pipelines.py  test_user_creation.py  test_zip_uploads.py
server/viame_server/: __init__.py  client_webroot.py  constants.py  event.py  pipelines.py  training.py  transforms.py  utils.py  viame.py  viame_detection.py
server/viame_server/model/: attribute.py
server/viame_server/serializers/: meva.py  models.py  viame.py
server/viame_tasks/: __init__.py  tasks.py  utils.py
server/viame_utils/: __init__.py
server/viame_utils/types/: __init__.py  pipelines.py
(+988 files in other folders)
