[tool.black]
line-length = 100
skip-string-normalization = true
target-version = ["py38"]
exclude = '\.eggs|\.git|\.mypy_cache|\.tox|\.env|\.venv|env|venv|_build|buck-out|build|dist'

[tool.isort]
profile = "black"
line_length = 100
# Sort by name, don't cluster "from" vs "import"
force_sort_within_sections = true
# Combines "as" imports on the same line
combine_as_imports = true

[tool.mypy]
python_version = 3.8
ignore_missing_imports = true
show_error_context = true
show_column_numbers = true
show_error_codes = true
pretty = true
exclude = '\.eggs|\.git|\.mypy_cache|\.tox|\.env|\.venv|env|venv|_build|buck-out|build|dist'

[tool.poetry]
name = "dive_server"
version = "1.0.0"
description = "DIVE Data Server"
authors = ["Kitware, Inc. <viame-web@kitware.com>"]
license = "Apache 2.0"
include = ["**/*.mako"]
readme = "README.md"
keywords = ["DIVE", "VIAME", "Annotation", "Computer Vision", "Marine"]
classifiers = [
  "License :: OSI Approved :: Apache Software License",
  "Natural Language :: English",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
]
packages = [
  { include = "bucket_notifications" },
  { include = "dive_server" },
  { include = "dive_tasks" },
  { include = "dive_utils" },
  { include = "rabbitmq_user_queues" },
]

[tool.poetry.dependencies]
python = ">=3.8,<3.10"
cheroot = ">=8.4.5"
click = "^8.1.3"
girder = "3.1.14"
girder_jobs = "3.1.14"
girder_worker = "0.8.1"
girder_worker_utils = "0.8.7"
pydantic = "1.9.0"
pyrabbit2 = "1.0.7"
typing-extensions = "^4.2.0"
GPUtil = "^1.4.0"
requests = ">=2.27.1"
urllib3 = "<1.27"
girder-large-image = "^1.17.0"
large-image = "^1.17.0"
large-image-source-pil = "^1.17.0"
simplejpeg = "^1.6.4"
large-image-tasks = "^1.17.0"
large-image-converter = "^1.17.0"
gdal = {url = "https://github.com/girder/large_image_wheels/raw/wheelhouse/GDAL-3.5.0-cp38-cp38-manylinux_2_17_x86_64.manylinux2014_x86_64.whl"}
bitarray = "^2.5.1"
large-image-source-gdal = "^1.17.0"
large-image-source-tiff = "^1.17.0"
large-image-source-ometiff = "^1.17.0"
large-image-source-openjpeg = "^1.17.0"
mapnik = {url = "https://github.com/girder/large_image_wheels/raw/wheelhouse/mapnik-4.0.0-cp38-cp38-manylinux_2_17_x86_64.manylinux2014_x86_64.whl"}
libtiff = {url = "https://github.com/girder/large_image_wheels/raw/wheelhouse/libtiff-0.5.0-cp38-cp38-manylinux_2_17_x86_64.manylinux2014_x86_64.whl"}
large-image-source-mapnik = "^1.17.0"
pyvips = {url = "https://github.com/girder/large_image_wheels/raw/wheelhouse/pyvips-2.2.0-cp38-cp38-manylinux_2_17_x86_64.manylinux2014_x86_64.whl"}
python-javabridge = {url = "https://github.com/girder/large_image_wheels/raw/wheelhouse/python_javabridge-4.0.3-cp38-cp38-manylinux_2_17_x86_64.manylinux2014_x86_64.whl"}
pyproj = {url = "https://github.com/girder/large_image_wheels/raw/wheelhouse/pyproj-3.3.1.1-cp38-cp38-manylinux_2_17_x86_64.manylinux2014_x86_64.whl"}
pylibtiff = {url = "https://github.com/girder/large_image_wheels/raw/wheelhouse/pylibtiff-0.5.0-cp38-cp38-manylinux_2_17_x86_64.manylinux2014_x86_64.whl"}
pylibmc = {url = "https://github.com/girder/large_image_wheels/raw/wheelhouse/pylibmc-1.6.3-cp38-cp38-manylinux_2_17_x86_64.manylinux2014_x86_64.whl"}
psutil = {url = "https://github.com/girder/large_image_wheels/raw/wheelhouse/psutil-5.7.3-cp38-cp38-manylinux2010_x86_64.whl"}

[tool.poetry.group.dev.dependencies]
numpy = "^1.21.4"
opencv-python = "^4.5.5"
tox = "^3.25.0"

[tool.poetry.scripts]
diveutils = "scripts.entrypoint_dev:cli"
dive = "scripts.entrypoint_main:cli"

[tool.poetry.plugins."girder.plugin"]
dive_server = "dive_server:GirderPlugin"
bucket_notifications = "bucket_notifications:GirderPlugin"
rabbit_user_queues = "rabbitmq_user_queues:GirderPlugin"

[tool.poetry.plugins."girder_worker_plugins"]
dive_tasks = "dive_tasks:DIVEPlugin"

[build-system]
requires = ["poetry-core>=1.0.0", "setuptools"]
build-backend = "poetry.core.masonry.api"
